<resources>
    <string name="app_name">臺灣環境資訊</string>

    <string name="home">首頁</string>
    <string name="home_title">個人首頁</string>
    <string name="region">地區</string>
    <string name="taiwan_region_title">臺灣地區</string>
    <string name="more">更多</string>
    <string name="more_title">更多</string>

    <string name="references">參考資料</string>
    <string name="photo_and_icon_original">照片/圖標來源</string>
    <string name="about_developer">關於開發者</string>
    <string name="app_intro">應用程式介紹</string>
    <string name="privacy_policy">隱私權政策</string>
    <string name="copyright">版權聲明</string>
    <string name="app_version">應用程式版本</string>

    <string name="privacy_policy_1_title">一、隱私權政策的適用範圍</string>
    <string name="privacy_policy_1_detail">隱私權政策的適用範圍，僅包括處理您使用本App服務時所獲取的個人資料，並不適用於本App以外的相關連結。</string>
    <string name="privacy_policy_2_title">二、個人資料的處理及利用方式</string>
    <string name="privacy_policy_2_detail">當您使用本App服務時，會根據您所使用的服務功能性質，請您提供需要的系統權限，並在該服務功能範圍內處理您的個人資料，本App並不會將您的個人資料用於其他用途，不會在任何伺服器中記錄您的個人資料。</string>
    <string name="privacy_policy_3_title">三、對外的相關連結</string>
    <string name="privacy_policy_3_detail">本App中的其他網路連結，不適用本App的隱私權保護政策，您必須參考該連結網站中的隱私權保護政策。</string>
    <string name="privacy_policy_4_title">四、隱私權保護政策之修正</string>
    <string name="privacy_policy_4_detail">本App的隱私權政策，將因應需求隨時進行修正。</string>

    <string name="copyright_message">Copyright © 2020 LIU,EnWei 版權所有</string>

    <string name="item_more_title">%1$s 在%2$s。</string>
    <string name="uv_index">紫外線指數：%1$s</string>
    <string name="uv_index_low">低量級</string>
    <string name="uv_index_middleweight">中量級</string>
    <string name="uv_index_high">高量級</string>
    <string name="uv_index_excess">過量級</string>
    <string name="uv_index_dangerous">危險級</string>
    <string name="sunburn_time">#曝曬%1$d分鐘內就可能曬傷</string>
    <string name="pay_attention_to_sun_protection">#注意防曬</string>

    <string name="icons_made_by">%1$s made by %2$s from %3$s.</string>
    <string name="taiwan_icon">Taiwan icon</string>
    <string name="android_icon">Android icon</string>
    <string name="freepik">Freepik</string>
    <string name="flaticon">Flaticon</string>
    <string name="taiwan_svg">Taiwan SVG</string>
    <string name="luuva">Luuva</string>
    <string name="wikimedia_commons">wikimedia commons</string>
    <string name="app_icons">App icons</string>
    <string name="android">Android</string>
    <string name="material_design">material design</string>

    <string name="taiwan_epa_open_data">臺灣行政院環保署環境資料開放平臺</string>

    <string name="name">Liu En-Wei</string>
    <string name="about_developer_detail">&#8195;&#8195;一個Android Developer，大學三年級因專題學習撰寫Android App，畢業後至今工作五年，閒暇時喜歡旅遊、讀寫小說、玩遊戲和看遊戲實況。</string>
    <string name="about_project">關於專案</string>
    <string name="about_project_detail">&#8195;&#8195;此專案的構想是在2018年，為了練習Kotlin，利用當時公司(於2019年四月離職)提供的Side Project Time。\n
        &#8195;&#8195;2020年五月於前公司離職後，使用前公司常用的App架構，依照當初的專案構想又重新撰寫了一次，並將原始碼開源至GitHub。</string>
    <string name="sources_code">GitHub 原始碼</string>

    <string name="uv">UV</string>
    <string name="index">INDEX</string>
    <string name="no_site">該地區查無觀測站</string>
    <string name="reference">資料來源：</string>
    <string name="oops">Oops</string>
    <string name="network_error_message">Please check your network connection.</string>
    <string name="go_settings_message">您未提供位置權限，請至設定頁開啟或選擇所在地區。</string>
    <string name="go_settings">前往設定</string>

    <string name="floating_button_guide">點擊右下角的懸浮按鈕提供位置權限，\n或長按右下角的懸浮按鈕設定所在區域。</string>

    <string name="environmental_protection_administration">環境保護署</string>
    <string name="aqi_value">空氣品質指標：%1$s</string>
    <string name="aqi_status">#空氣品質狀態%1$s</string>
    <string name="aqi_pollutant">#空氣污染指標物：%1$s</string>
    <string name="pm_2_5_title"><html><body>PM<sub>2.5</sub>\n(μg/m<sup>3</sup>)</body></html></string>
    <string name="pm_10_title">PM<sub>10</sub>\n(μg/m<sup>3</sup>)</string>
    <string name="o3_title">O<sub>3</sub>\n(ppb)</string>
    <string name="c_o_title">CO\n(ppm)</string>
    <string name="s_o_2_title">SO<sub>2</sub>\n(ppb)</string>
    <string name="n_o_2_title">NO<sub>2</sub>\n(ppb)</string>
    <string name="hour_concentration">小時濃度</string>
    <string name="moving_average_concentration">移動平均濃度</string>
    <string name="eight_hours_moving_average_concentration">八小時移動平均濃度</string>
    <string name="aqi">AQI</string>
    <string name="brackets">(%1$s)</string>

    <string name="intro_title_first">Hi, 您好</string>
    <string name="intro_content_first">這是一個獨立開發者製作的App，目前串接了空氣污染指標、紫外線指數等政府公開資料。</string>
    <string name="intro_title_second">自由選擇是否提供權限</string>
    <string name="intro_content_second">您可以選擇提供權限或是自行設定所在區域，是否提供位置權限並不影響正常功能運作。</string>
    <string name="intro_title_third">開源的程式碼</string>
    <string name="intro_content_third">程式的原始碼已上傳至Github，您可以在「更多」中獲得相關訊息。</string>
    <string name="skip">略過</string>
    <string name="start_now">立即開始</string>

    <string name="select_region">選擇地區</string>
    <!--  Taiwan Region  -->
    <string name="country_taiwan">臺灣</string>
    <string name="keelung_city">基隆市</string>
    <string name="taipei_city">臺北市</string>
    <string name="new_taipei_city">新北市</string>
    <string name="taoyuan_city">桃園市</string>
    <string name="hsinchu_city">新竹市</string>
    <string name="hsinchu_county">新竹縣</string>
    <string name="miaoli_county">苗栗縣</string>
    <string name="taichung_city">臺中市</string>
    <string name="changhua_county">彰化縣</string>
    <string name="yunlin_county">雲林縣</string>
    <string name="chiayi_county">嘉義縣</string>
    <string name="chiayi_city">嘉義市</string>
    <string name="tainan_city">臺南市</string>
    <string name="kaohsiung_city">高雄市</string>
    <string name="pingtung_county">屏東縣</string>
    <string name="yilan_county">宜蘭縣</string>
    <string name="hualien_county">花蓮縣</string>
    <string name="taitung_county">臺東縣</string>
    <string name="nantou_county">南投縣</string>
    <string name="penghu_county">澎湖縣</string>
    <string name="kinmen_county">金門縣</string>
    <string name="lienchiang_county">連江縣</string>
    <string name="kueishan_islands">龜山島</string>
    <string name="liouciou_hsiao_island">小琉球</string>
    <string name="ludao_township">綠島</string>
    <string name="lanyu_township">蘭嶼</string>
    <string name="dongsha_islands">東沙群島</string>
    <string name="nasha_islands">南沙太平島與中州礁</string>
    <string name="wuqiu_township">烏坵嶼</string>

    <string-array name="taiwan_region">
        <item>@string/lienchiang_county</item>
        <item>@string/kinmen_county</item>
        <item>@string/keelung_city</item>
        <item>@string/taipei_city</item>
        <item>@string/new_taipei_city</item>
        <item>@string/taoyuan_city</item>
        <item>@string/hsinchu_city</item>
        <item>@string/hsinchu_county</item>
        <item>@string/miaoli_county</item>
        <item>@string/taichung_city</item>
        <item>@string/changhua_county</item>
        <item>@string/yunlin_county</item>
        <item>@string/chiayi_city</item>
        <item>@string/chiayi_county</item>
        <item>@string/tainan_city</item>
        <item>@string/kaohsiung_city</item>
        <item>@string/pingtung_county</item>
        <item>@string/yilan_county</item>
        <item>@string/hualien_county</item>
        <item>@string/taitung_county</item>
        <item>@string/nantou_county</item>
        <item>@string/penghu_county</item>
    </string-array>

</resources>