<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.privacypolicy.PrivacyPolicyFragment">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="25dp">

            <TextView
                style="@style/privacy_policy_title"
                android:id="@+id/text_privacy_policy_1_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_1_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <View
                style="@style/privacy_policy_title_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_1_title"/>
            <TextView
                style="@style/privacy_policy_detail"
                android:id="@+id/text_privacy_policy_1_detail"
                android:text="@string/privacy_policy_1_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_1_title" />
            <TextView
                style="@style/privacy_policy_title"
                android:id="@+id/text_privacy_policy_2_title"
                android:text="@string/privacy_policy_2_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_1_detail" />
            <View
                style="@style/privacy_policy_title_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_2_title"/>
            <TextView
                style="@style/privacy_policy_detail"
                android:id="@+id/text_privacy_policy_2_detail"
                android:text="@string/privacy_policy_2_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_2_title" />
            <TextView
                style="@style/privacy_policy_title"
                android:id="@+id/text_privacy_policy_3_title"
                android:text="@string/privacy_policy_3_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_2_detail" />
            <View
                style="@style/privacy_policy_title_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_3_title"/>
            <TextView
                style="@style/privacy_policy_detail"
                android:id="@+id/text_privacy_policy_3_detail"
                android:text="@string/privacy_policy_3_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_3_title" />
            <TextView
                style="@style/privacy_policy_title"
                android:id="@+id/text_privacy_policy_4_title"
                android:text="@string/privacy_policy_4_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_3_detail" />
            <View
                style="@style/privacy_policy_title_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_4_title"/>
            <TextView
                style="@style/privacy_policy_detail"
                android:id="@+id/text_privacy_policy_4_detail"
                android:text="@string/privacy_policy_4_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_privacy_policy_4_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>