<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_aqi_more"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:background="@color/colorGray400"
    tools:visibility="visible">

    <TableRow
        android:layout_marginBottom="1dp">
        <TextView
            style="@style/aqi_more_title"
            android:text="@string/pm_2_5_title"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                style="@style/aqi_more_normal"
                android:layout_marginBottom="1dp"
                android:text="@string/moving_average_concentration" />
            <TextView
                style="@style/aqi_more_normal"
                android:text="@string/hour_concentration"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_pm_2_5_avg"
                android:layout_marginBottom="1dp"
                tools:text="15" />
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_pm_2_5"
                tools:text="9"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_marginBottom="1dp">
        <TextView
            style="@style/aqi_more_title"
            android:text="@string/pm_10_title"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/aqi_more_normal"
                android:layout_marginBottom="1dp"
                android:text="@string/moving_average_concentration" />
            <TextView
                style="@style/aqi_more_normal"
                android:text="@string/hour_concentration"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_pm_10_avg"
                android:layout_marginBottom="1dp"
                tools:text="27" />
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_pm_10"
                tools:text="25"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_marginBottom="1dp">
        <TextView
            style="@style/aqi_more_title"
            android:text="@string/o3_title"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/aqi_more_normal"
                android:layout_marginBottom="1dp"
                android:text="@string/eight_hours_moving_average_concentration" />
            <TextView
                style="@style/aqi_more_normal"
                android:text="@string/hour_concentration"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_o3_8hr_avg"
                android:layout_marginBottom="1dp"
                tools:text="17" />
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_o3"
                tools:text="12"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_marginBottom="1dp">
        <TextView
            style="@style/aqi_more_title"
            android:text="@string/c_o_title"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/aqi_more_normal"
                android:layout_marginBottom="1dp"
                android:text="@string/eight_hours_moving_average_concentration" />
            <TextView
                style="@style/aqi_more_normal"
                android:text="@string/hour_concentration"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_c_o_8hr_avg"
                android:layout_marginBottom="1dp"
                tools:text="0.42" />
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_c_o"
                tools:text="0.88"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_marginBottom="1dp">
        <TextView
            style="@style/aqi_more_title"
            android:text="@string/s_o_2_title"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                style="@style/aqi_more_normal"
                android:layout_marginBottom="1dp"
                android:text="@string/moving_average_concentration" />
            <TextView
                style="@style/aqi_more_normal"
                android:text="@string/hour_concentration"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_s_o_2_avg"
                android:layout_marginBottom="1dp"
                tools:text="0.88" />
            <TextView
                style="@style/aqi_more_value"
                android:id="@+id/text_s_o_2"
                tools:text="0.8"/>
        </LinearLayout>
    </TableRow>
    <TableRow>
        <TextView
            style="@style/aqi_more_title"
            android:text="@string/n_o_2_title"/>
        <TextView
            style="@style/aqi_more_normal"
            android:layout_height="81dp"
            android:text="@string/hour_concentration"/>
        <TextView
            style="@style/aqi_more_value"
            android:id="@+id/text_n_o_2"
            android:layout_height="81dp"
            tools:text="12.4" />
    </TableRow>
</TableLayout>