<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <TextView
        android:id="@+id/text_site_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_reference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="臺北"/>
    <TextView
        android:id="@+id/text_reference"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorGray800"
        android:text="@string/reference"
        app:layout_constraintTop_toBottomOf="@id/text_site_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/text_agency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorGray800"
        app:layout_constraintTop_toTopOf="@id/text_reference"
        app:layout_constraintBottom_toBottomOf="@id/text_reference"
        app:layout_constraintStart_toEndOf="@id/text_reference"
        tools:text="環保署"/>
    <TextView
        android:id="@+id/uv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColor="@color/colorBlack"
        android:text="@string/uv"
        android:textStyle="bold"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/index"
        app:layout_constraintEnd_toStartOf="@id/text_uv"
        app:layout_constraintVertical_chainStyle="packed" />
    <TextView
        android:id="@+id/index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:text="@string/index"
        android:textStyle="bold"
        android:translationY="-6dp"
        app:layout_constraintTop_toBottomOf="@id/uv"
        app:layout_constraintStart_toStartOf="@id/uv"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/text_uv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="40sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/index"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="5"/>
</androidx.constraintlayout.widget.ConstraintLayout>